# ascend-great-expectations-gcs

./: .Dockerignore  .gitignore  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
.github/actions/build_publish/: action.yaml
.github/actions/build_publish_docker/: action.yaml
.github/actions/build_publish_python/: action.yaml
.github/workflows/: docker-build.yaml
src/ascend_great_expectations_gcs/: validator.py
tests/: Makefile  test.py  test_ascend_great_expectations_gcs.py  tests.py
tests/ascend_great_expectations_gcs_test/: test_validator.py  validator.py  validator_new.py
