[metadata]
name = ascend_great_expectations_gcs
version = 0.0.1
description = A wrapper around Great Expectation for building validation components in Ascend
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    great_expectations
    google-cloud-storage

[options.packages.find]
where = src
